- Fixed hamburger z-index - Adjusted 'cta-button' padding - Adjusted padding for multiple gamemode sections

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -114,7 +114,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 15px 30px;
-  z-index: 2; /* above everything */
+  z-index: 1001;
 }
 
 .logo {
@@ -133,7 +133,7 @@ body {
   cursor: pointer;
   padding: 5px;
   position: relative;
-  z-index: 1001;
+  z-index: 1000;
 }
 
 .hamburger span {
@@ -256,7 +256,7 @@ body {
 .cta-button {
   display: inline-block;
   font-size: 1rem;
-  padding: 10px 20px;
+  padding: 12px 20px 10px 20px;
   background: linear-gradient(135deg, var(--clr-primary), var(--clr-accent));
   color: white;
   text-decoration: none;
@@ -276,8 +276,7 @@ body {
 @media (max-width: 1024px) {
   .cta-button {
     font-size: 0.8rem;
-    padding: 7px 10px;
-    padding-bottom: 5px;
+    padding: 12px 20px 10px 20px;
   }
 }
 
@@ -420,9 +419,9 @@ body {
 .game-modes h2 {
   font-size: clamp(1.8rem, 4vw, 2.5rem);
   color: var(--clr-text-white);
-  margin-bottom: clamp(40px, 8vw, 80px);
   text-align: center;
   letter-spacing: 2px;
+  margin-bottom: clamp(40px, 8vw, 40px);
   font-weight: 400;
   position: relative;
   z-index: 1;
@@ -485,6 +484,10 @@ body {
   padding-left: clamp(12px, 3vw, 20px);
   border-left: clamp(3px, 0.5vw, 4px) solid;
   position: relative;
+}
+
+.classic-header {
+    margin-top: clamp(40px, 8vw, 80px);
 }
 
 .mode-card:nth-child(1) .mode-header {
